; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/ext4/extr_ext4_xattr.c_ext4_xattr_item_remove.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/ext4/extr_ext4_xattr.c_ext4_xattr_item_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ext4_xattr_ref = type { i32 }
%struct.ext4_xattr_item = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ext4_xattr_ref*, %struct.ext4_xattr_item*)* @ext4_xattr_item_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ext4_xattr_item_remove(%struct.ext4_xattr_ref* %0, %struct.ext4_xattr_item* %1) #0 {
  %3 = alloca %struct.ext4_xattr_ref*, align 8
  %4 = alloca %struct.ext4_xattr_item*, align 8
  store %struct.ext4_xattr_ref* %0, %struct.ext4_xattr_ref** %3, align 8
  store %struct.ext4_xattr_item* %1, %struct.ext4_xattr_item** %4, align 8
  %5 = load %struct.ext4_xattr_item*, %struct.ext4_xattr_item** %4, align 8
  %6 = getelementptr inbounds %struct.ext4_xattr_item, %struct.ext4_xattr_item* %5, i32 0, i32 1
  %7 = load %struct.ext4_xattr_ref*, %struct.ext4_xattr_ref** %3, align 8
  %8 = getelementptr inbounds %struct.ext4_xattr_ref, %struct.ext4_xattr_ref* %7, i32 0, i32 0
  %9 = call i32 @rb_erase(i32* %6, i32* %8)
  %10 = load %struct.ext4_xattr_item*, %struct.ext4_xattr_item** %4, align 8
  %11 = getelementptr inbounds %struct.ext4_xattr_item, %struct.ext4_xattr_item* %10, i32 0, i32 0
  %12 = call i32 @list_del_init(i32* %11)
  ret void
}

declare dso_local i32 @rb_erase(i32*, i32*) #1

declare dso_local i32 @list_del_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
